# LazyCat

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claude.md  eslint.config.mjs  package.json  pnpm-lock.yaml  process.md  tsconfig.base.json
.claude/: settings.local.json
apps/desktop/: components.d.ts  index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/e2e/: smoke.spec.ts
apps/desktop/src/: App.vue  main.ts  styles.css  tauri-api.d.ts  tool-registry.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/tools/: convert.rs  cron.rs  crypto.rs  dns.rs  encode.rs  env.rs  file.rs  format.rs  gen.rs  helpers.rs  hosts.rs  hotkey.rs  image.rs  jwt.rs  manuals.rs  mod.rs  mybatis.rs  network.rs  nginx.rs  port.rs  regex.rs  schema.rs  settings.rs  snippets.rs  text.rs  time.rs
apps/desktop/src/bridge/: tauri.ts
apps/desktop/src/components/: AesPanel.vue  BaseConverterPanel.vue  CalcDraftPanel.vue  ColorPanel.vue  (+36 more)
resources/hotkey-library/: app-hotkey-mappings.json
resources/manuals/: README.md
resources/manuals/element-plus/: index.html
resources/manuals/vue2/: index.html
resources/manuals/vue3/: 404.html  hashmap.json  index.html  llms-full.txt  llms.txt  sitemap.xml
resources/regex-library/: templates.json
scripts/: build-tauri-win.ps1  package.json  scrape-element-plus.mjs  scrape-mdn-js.mjs
(+1365 files in other folders)
